--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,5 @@
 // Home Content
-
-
-
-
 .home {
-
   header {
     .margin-auto();
   
@@ -13,12 +8,19 @@
       width: 100%;
   
       .bluesky {
-        .margin-auto();
+        margin: auto;
+        margin-top: 100px;
         width: 100%;
       }
-    }
-  
+
   }  
+
+}
+.bluesky {
+  margin: auto;
+  margin-top: 85px;
+  width: 100%;
+}
 
   .intro {
 
