--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,12 +1,11 @@
 // Navigation code here
 .navigation {
+    background: @nav-bg;
     width: 100%;
-    margin-top: 1%;
+    position: fixed;
     @media @mobile {
         .center();
-        margin-top: 1%;
         width: 100%;
-
         h1 {
             margin: 10px auto;
         }
@@ -33,7 +32,7 @@
     @media @mobile {
         .center();
         width: 100%;
-        margin: 5px auto;
+        margin: 0 auto;
         
     }
 
